<resources>
    <string name="app_name">Diamond Club TV</string>
    <string name="app_description">Mobile app for the Diamond Club community podcast network. \n\nDiamond Club TV is not fueled by advertisers, but instead powered by support from our community. \n\nThis app is a community project as well, with multiple contributions from fans of the shows and members of the Diamond Club community. \n\n &lt;&gt;</string>
    <string name="action_settings">Settings</string>
    <string name="action_quality">Stream Quality</string>
    <string name="channel_art_description">Channel art</string>
    <string name="title_activity_play_stream">PlayStreamActivity</string>
    <string name="main_bg_description">Diamondclub logo</string>

    <string name="media_route_menu_title">Play on…</string>
    <string name="cast_introduction">Play our streams on your big screen!</string>

    <string name="chat">Open Chat</string>

    <string name="alt_chat_msg">The channel\'s chatroom is displayed. You can go to Chatrealm\'s #chat channel via the menu</string>

    <string name="video_error_media_load_timeout">Timeout loading video</string>
    <string name="video_error_server_unaccessible">Stream server not accessible</string>
    <string name="video_error_unknown_error">Unknown Error</string>
    <string name="video_error_youtube">Sorry, we can\'t play YouTube streams in this app yet. Please try the DCTV 24/7 channel.</string>

    <string name="pref_notify">Enable Notifications</string>
    <string name="pref_notify_summary">Enable Notifications</string>
    <string name="pref_chat_name">IRC Chat Name</string>
    <string name="pref_chat_name_summary">IRC Chat Name</string>
    <string name="pref_stream_quality">Stream Video Quality</string>
    <string name="pref_stream_quality_summary">Stream Video Quality</string>
    <string name="pref_stream_quality_default">high</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live_video">Live Video</string>
    <string name="live_audio">Live Audio</string>
    <string name="chat_activity">Chatrealm</string>
    <string name="about">About</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_radio">DCFM</string>
    <string name="switch_chat">Switch Chat</string>
    <string name="chat_navigate_back">Chat: Navigate Back</string>
    <string name="switch_to_custom_twitch_chat">Go to a Twitch chatroom</string>
    <string name="custom_twitch_chat_dialog_msg">If this show simulcasts to Twitch and uses Twitch as the main chatroom, you can enter the username the show uses to view their chat</string>
    <string name="custom_twitch_chat_dialog_title">Enter Twitch username</string>
    <string name="video_error_fail">Stream failed to load. Perhaps the show stopped broadcasting or the selected quality isn\'t available. Try another quality.</string>
    <string name="loading_radio">%s is loading in your notifications</string>
    <string name="pref_stream_quality_mobile">Video Quality on Mobile</string>
    <string name="pref_stream_quality_mobile_summary">Video quality on mobile connections and metered WiFi hotspots</string>
    <string name="pref_stream_quality_mobile_default">low</string>
    <string name="title_activity_twitch_login">TwitchLoginActivity</string>
    <string name="enter_message">Enter a message</string>
    <string name="send">Send</string>
    <string name="chat_service_switcher">Choose a chat service</string>
    <string name="twitch_radio_button">Twitch chat</string>
    <string name="login_to_twitch">Link Twitch account</string>
    <string name="chatrealm_radio_button">Chatrealm IRC chat</string>
    <string name="channel">channel</string>
    <string name="nickname">Nickname</string>
    <string name="login_button">Login</string>
    <string name="twitch_link_status_negative">The app is not linked with a Twitch account</string>
    <string name="twitch_link_status_positive">The app is successfully linked to %s on Twitch</string>
    <string name="disconnect">Disconnect chat</string>
    <string name="unlink_twitch">Unlink Twitch</string>
    <string name="new_chat_message">New chat message(s) have arrived</string>
    <string name="dc_notice_title">Diamond Club has evolved</string>
    <string name="dc_notice_message">Diamond Club TV has been through many changes behind the scenes. That means that this app for now doesn\'t work anymore for viewing our livestreams. Chat still works.  We are working on making this app useful again. \n\nPlease visit diamondclub.tv in your browser, for now.</string>
    <string name="dc_notice_button">Visit diamondclub.tv</string>
    <string name="visit">Visit</string>
    <string name="cancel">Cancel</string>
    <string name="dc_notice_dialog_title">Important notice</string>
    <string name="dc_notice_dialog_message">Diamond Club TV has been through many changes behind the scenes. That means that this app for now doesn\'t work anymore for viewing our livestreams. Chat still works.  We are working on making this app useful again. \n\nPlease visit diamondclub.tv on your browser, for now.</string>


</resources>
